# mykobo-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPENDENCY_WARNING_ANALYSIS.md  MESSAGE_BUS_DOCUMENTATION.md  Makefile  RELEASE.md  cliff.toml  release.toml
src/: auth.rs  lib.rs  util.rs
src/anchor/: mod.rs
src/anchor/dapp/: mod.rs
src/anchor/models/: dapp.rs  mod.rs  stellar.rs
src/anchor/stellar/: mod.rs
src/business/: mod.rs
src/circle/: mod.rs
src/circle/models/: mod.rs  request.rs  response.rs
src/identity/: mod.rs
src/identity/models/: mod.rs  request.rs  response.rs
src/ledger/: mod.rs
src/ledger/models/: mod.rs  request.rs  response.rs
src/message_bus/: mod.rs  models.rs
src/message_bus/kafka/: consumer.rs  mod.rs  models.rs  producer.rs
src/message_bus/models/: base.rs  event.rs  instruction.rs  message.rs  mod.rs  notification.rs
src/message_bus/sqs/: mod.rs  models.rs
src/models/: error.rs  mod.rs
src/models/request/: identity.rs  mod.rs  sumsub.rs
src/models/response/: auth.rs  identity.rs  mod.rs  sumsub.rs  wallets.rs
src/notification/: events.rs  keys.rs  mod.rs
src/notification_contract/: canonical.rs  mod.rs  parser.rs  predicates.rs  registry.rs  registry.yaml
src/payment_intent/: mod.rs
src/payment_intent/models/: mod.rs  payment_reference.rs
src/sumsub/: mod.rs
src/sumsub/models/: mod.rs  response.rs
src/wallets/: mod.rs
src/wallets/models/: mod.rs  request.rs  response.rs
tests/: canonical_snapshot_test.rs  event_type_extensions_test.rs  fixtures_roundtrip_test.rs  lib.rs  notification_contract_test.rs  notification_models_test.rs
tests/anchor/: mod.rs  test_dapp_deserialisation.rs  test_stellar_deserialisation.rs
tests/business/: mod.rs  test_whitelisted_countries.rs
tests/fixtures/notification/: customer_relay_completed.json  customer_relay_initiated.json  customer_relay_onboarded.json  platform_circle_api_5xx_burst.json  platform_relay_failed.json  platform_relay_forwarding_failed.json  platform_relay_stuck_depositing.json  platform_webhook_reprocessor_backlog.json
tests/fixtures/notification_contract/: registry.canonical.json
tests/identity/: mod.rs  test_customer_requests.rs  test_response_serialisers.rs  test_token_validation.rs
tests/ledger/: mod.rs  test_transaction_deserialisation.rs
tests/ledger/fixtures/: transaction_by_external_id.json  transaction_compliance_events.json  transaction_details_by_reference.json  transaction_list.json  transaction_statuses.json
tests/message_bus/: mod.rs  test_base_models.rs  test_event_models.rs  test_instruction_models.rs  test_kafka_clients.rs  test_kafka_message_bus.rs  test_message_bus_message_deserialisation.rs  test_message_models.rs  test_message_serialisation.rs
tests/models/: error.rs  mod.rs  test_customer_response.rs
tests/notification/: events_test.rs  keys_test.rs  mod.rs
tests/payment_intent/: mod.rs  test_payment_reference_deserialisation.rs
tests/stubs/: authenticate.json  get_access_token_success.json  get_profile.json  identity_data_kyc_completed.json  identity_data_kyc_pending.json  identity_user_risk_score.json  new_customer_response.json  new_document_response.json  new_wallet_success.json  stellar_anchor_transaction_response.json  sumsub_add_document_success.json  sumsub_applicant_success.json  sumsub_initiate_check_error.json  wallet_not_found.json
tests/sumsub/: mod.rs  test_applicant.rs
tests/wallets/: mod.rs  test_wallet_requests.rs
(+4 files in other folders)
