[package]
name = "mykobo-rs"
version = "1.0.8"
edition = "2021"
repository = "https://github.com/mykobo/mykobo-rs"
description = "A MYKOBO API client written in Rust, to interact with the MYKOBO suite of services."
license-file = "LICENSE"
publish = false

[dependencies]
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.76.0" }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl-vendored"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0" }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.17"
serde_with = "3.15.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.47.0", features = ["test-util"] }
wiremock = "0.6.4"
reqwest = { version = "0.12.22", features = ["json"] }
fake = { version = "4.3.0", features = ["ulid"] }
serial_test = "3.2.0"
