[package]
name = "mykobo-rs"
version = "1.0.26"
edition = "2021"
repository = "https://github.com/mykobo/mykobo-rs"
description = "A MYKOBO API client written in Rust, to interact with the MYKOBO suite of services."
license-file = "LICENSE"
publish = false

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.91.0" }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
log = "0.4.29"
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl-vendored"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0" }
uuid = { version = "1.19.0", features = ["v4"] }
thiserror = "2.0.17"
serde_with = "3.16.1"
bigdecimal = { version = "0.4.10" , features = ["serde", "serde-json"]}

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.47.0", features = ["test-util"] }
wiremock = "0.6.5"
reqwest = { version = "0.13.1", features = ["json"] }
fake = { version = "4.4.0", features = ["ulid"] }
serial_test = "3.3.1"
